Convert to Project Loom virtual threads